# syncweb

./: .codemapignore  .dockerignore  .gitignore  .gitmodules  .merlin  Dockerfile  EXTERNAL  Makefile  Makefile.common  Makefile.config  authors.txt  bugfix.txt  bugs.txt  changes.org  changes.txt  code.ml  code.mli  commons  configure  copyright.txt  credits.txt  dune  dune-project  engine.ml  engine.mli  env.csh  env.sh  install.txt  install_macos.txt  lang.ml  lang.mli  lpize.ml  lpize.mli  lpizer.opam  main.ml  menhir-wrapper  notes.txt  project.el  readme.txt  refactor.ml  (+13 more)
.github/workflows/: docker.yml
backend/: Crossref_chunk.ml  Crossref_code.ml  Makefile  Web_to_code.ml  Web_to_tex.ml  Web_to_tex.mli  crossref_chunk.ml  crossref_chunk.mli  crossref_code.ml  crossref_code.mli  dune  web_to_code.ml  web_to_code.mli  web_to_tex.ml  web_to_tex.mli
codegraph/: Makefile
commons/: .depend  Makefile  common.ml  common.mli  concurrency.ml  distribution.ml  features.ml  glimpse.mli  graphic.ml  gui.ml  macro.ml4  opengl.ml  python.ml  readme.txt
commons/ocollection/: oassoc_cache.ml  oassoc_cache.mli
demos/: .depend  Makefile  demo.annot  demo.ml  demo.ml.nw  demo.mli  distribution.annot  distribution_test.annot  multi.nw  multi1.nw  multi2.nw
demos/mapreduce/: Makefile  Makefile.test  commons  config.pg  distribution.ml  distribution.ml.nw  distribution.mli  distribution_test.ml  expected_res_mpi.out  expected_res_simple.out  expected_time.out  readme.txt
demos/mapreduce/ocamlmpi/: .depend  Makefile  test_pad
emacs/: fix_noweb.el  hide-regexp.el
frontend/: Code.ml  Code.mli  Lang.ml  Makefile  Signature.ml  Signature.mli  Stat.ml  Web.ml  Web.mli  code.ml  code.mli  dune  lang.ml  lang.mli  signature.ml  signature.mli  web.ml  web.mli
globals/: .depend  Makefile  config.ml  config.ml.in
indexer/: CLI_indexer.ml  CLI_indexer.mli  Index.ml  Index.mli  Main.ml  Makefile  dune  dune-project  index_pfff.ml  main_indexer.ml
indexer/tests/: Test_indexer.ml  dune
lpize/: Makefile  lpize_pfff.ml
lpizer/: CLI_lpizer.ml  CLI_lpizer.mli  Comment_code.ml  Comment_code.mli  Lpize.ml  Lpize.mli  Main.ml  Makefile  dune  find_source.ml  lpize_old.ml  lpize_pfff.ml  main_lpizer.ml
lpizer/TODO/: Makefile
lpizer/tests/: Test_lpizer.ml  Test_lpizer.mli  dune
main/: CLI.ml  CLI.mli  Main.ml  Refactor.ml  Refactor.mli  Sync.ml  Sync.mli  dune  main.ml  refactor.ml  refactor.mli  sync.ml
scripts/: dpp_ml.pl  nowebhtml  noweblatex
scripts/todo/: noweblatex_multi
tests/: Test.ml  dune  final.orig  foo.nw  hello.c  hello.nw  simple.orig  test.ml.nw
tests/loc/: foo.nw
tests/lpizer/: foo.c  foo.ml
tests/snapshots/syncweb/01f21e800e9a/: name  stdout
tests/snapshots/syncweb/51760738cf94/: name  stdxxx
tests/snapshots/syncweb/90ddabc89984/: name  stdout
tests/snapshots/syncweb/cd9b9d84b2dc/: name  stdxxx
tests/syncweb/: Makefile  hello2.c  hello2.nw  hello_modif1.c  noweb.sty  script.nw  script.rc
