(executables
 (names Main)
 (modules Main)
 (libraries 
    indexer
  )
 ; 'byte' is useful for ocamldebug
 ; 'best' is 'native' with a fallback to 'byte' when native compilation isn’t available.
 (modes (best exe) byte)
 (preprocess (pps ppx_deriving.show )) ; LATER: ppx_profiling
)

(library
 (name indexer)
 (modules
   Index
 )
 (wrapped false)
 (libraries 
    ; external libs
    str
    ; for lang_cmt
    compiler-libs compiler-libs.common

    ; in semgrep-libs
    commons

    ; in codemap
    graph_code

    ; in codegraph
    pfff-lang_ml-analyze
    pfff-lang_cmt pfff-lang_cmt-analyze
    pfff-lang_c-analyze

    ; for find_source Lib_parsing_xxx
    codegraph.finder
 )
)


(install
 (package syncweb)
 (section bin)
 (files (Main.exe as syncweb_indexer))
)
