(executables
 (names Main)
 (modules Main)
 (libraries 
    indexer
  )
 ; 'byte' is useful for ocamldebug
 ; 'best' is 'native' with a fallback to 'byte' when native compilation isn’t available.
 (modes (best exe) byte)
 (preprocess (pps ppx_deriving.show )) ; LATER: ppx_profiling
)

(library
 (name indexer)
 (modules
   Index CLI_indexer
 )
 (wrapped false)
 (libraries 
    ; external libs
    str
    ; for lang_cmt
    compiler-libs compiler-libs.common

    ; in semgrep-libs
    commons

    ; in semgrep-pfff-langs
    graph_code
    finding_generic
    parser_ocaml.graph
    parser_cmt parser_cmt.graph
    parser_c.graph
    parser_cpp.menhir ; Parse_cpp.add_defs
    parser_cmt.finder
 )
)


(install
 (package lpizer)
 (section bin)
 (files (Main.exe as syncweb_indexer))
)
