(executables
 (names Main)
 (modules Main)
 (libraries 
    lpizer
  )
 ; 'byte' is useful for ocamldebug
 ; 'best' is 'native' with a fallback to 'byte' when native compilation isn’t available.
 (modes (best exe) byte)
 (preprocess (pps ppx_deriving.show )) ; LATER: ppx_profiling
)

(library
 (name lpizer)
 (modules
    Lpize Comment_code
 )
 (wrapped false)
 (libraries
    ; external libs
    logs
    fpath

    ; from semgrep-libs
    commons
    parser_cpp.ast parser_cpp.menhir parser_cpp.ast_generic
    parser_ocaml.ast parser_ocaml.menhir parser_ocaml.ast_generic
      parser_ocaml.tree_sitter ; to parse Cap object types
    ; for Lang.t
    semgrep.rule

    ; from codemap now
    commons2_
    graph_code

    ; from codegraph now
    pfff-lang_ml-analyze



    ; internal
    ; frontend
    ; backend
 )
 (preprocess (pps ppx_deriving.show )) ; LATER: ppx_profiling
)

(install
 (package syncweb)
 (section bin)
 (files (Main.exe as lpizer))
)
