(executables
 (names Main)
 (libraries
    commons
    frontend
    backend
 )
 (preprocess (pps ppx_deriving.show )) ; LATER: ppx_profiling
 ; 'byte' is useful for ocamldebug
 ; 'best' is 'native' with a fallback to 'byte' when native compilation isn’t available.
 (modes (best exe) byte)
)

(install
 (package syncweb)
 (section bin)
 (files (Main.exe as syncweb))
)
