(executables
 (names Main)
 (libraries
    ; external libs
    logs
    fpath
    commons
    profiling

    ; internal
    frontend
    backend
 )
 (preprocess (pps ppx_deriving.show profiling.ppx ))
 ; 'byte' is useful for ocamldebug
 ; 'best' is 'native' with a fallback to 'byte' when native compilation isn’t available.
 (modes (best exe) byte)
)

(install
 (package syncweb)
 (section bin)
 (files (Main.exe as syncweb))
)
