(executable
 (name test)
 (modules Test)
 (libraries
   ; std deps
   testo
   str unix

   ; semgrep-libs deps
   commons

   syncweb_lpizer_tests
   ;TODO: syncweb_indexer_tests (depends on codegraph libs)
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

(install
 (package lpizer)
 (section bin)
 (files
  (test.exe as test)
  ; useful to debug, see ../../debug and ocamldebug
  (test.bc as test.bc))
)
